# MAGATAMA

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  OVERVIEW.md  OVERVIEW_jp.md  README.en.md  README.md  README_jp.md  plan.md  pyproject.toml  result.md
.github/: AGENTS.md  FUNDING.yml
.github/prompts/: sdd-change-apply.prompt.md  sdd-change-archive.prompt.md  sdd-change-init.prompt.md  sdd-design.prompt.md  sdd-implement.prompt.md  sdd-requirements.prompt.md  sdd-steering.prompt.md  sdd-tasks.prompt.md  sdd-validate.prompt.md
.github/workflows/: ci.yml  release.yml
docs/: AI_TOOLS_SETUP.md  KNOWLEDGE_UPDATE_GUIDE.md  TROUBLESHOOTING.md  YATA_Performance_Evaluation.md  YATA_vs_Context7.md
docs/en/: AI_TOOLS_SETUP.md  KNOWLEDGE_UPDATE_GUIDE.md  TROUBLESHOOTING.md  YATA_Performance_Evaluation.md  YATA_vs_Context7.md
knowledge_graphs/: actix-web.json  alpine.json  astro.json  axum.json  backbone.json  bun.json  codeigniter.json  drizzle.json  echo.json  ember.json  express.json  fastapi.json  fastify.json  fiber.json  flask.json  gin.json  haystack.json  hono.json  htmx.json  koa.json  langgraph.json  nestjs.json  nuxt.json  phoenix.json  prisma.json  qwik.json  react.json  remix.json  solidjs.json  streamlit.json  summary.json  svelte.json  tauri.json  trpc.json  vue.json
scripts/: analyze_frameworks.py  measure_overview_tokens.py  update_knowledge_db.py
steering/: product.ja.md  project.yml  structure.ja.md  tech.ja.md
steering/rules/: constitution.md
storage/specs/: ADR-001-clean-architecture.md  ADR-002-mcp-protocol.md  ADR-003-tree-sitter-parser.md  ADR-004-graph-storage.md  DES-YATA-000-design-index.md  DES-YATA-001-c4-context.md  DES-YATA-002-c4-container.md  DES-YATA-003-c4-component.md  DES-YATA-004-test-strategy.md  DES-YATA-005-error-codes.md  DES-YATA-006-configuration.md  DES-YATA-007-sequence-diagrams.md  DES-YATA-008-deployment.md  REQ-YATA-001-requirements.md  TASK-YATA-001-task-breakdown.md  context7-superior-requirements.md
