# MAGATAMA Workspace - Monorepo Configuration
# Project: MAGATAMA (勾玉) - AI Coding Support MCP Server
# Article I: Library-First Principle - magatama-core as independent library

[project]
name = "magatama-workspace"
version = "0.5.0"
description = "MAGATAMA (勾玉) - Knowledge Graph MCP Server for AI Coding Support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "MAGATAMA Team" }]
dependencies = [
    "tree-sitter-typescript>=0.23.2",
]

[tool.uv.workspace]
members = ["packages/magatama-core", "packages/magatama-mcp"]

[tool.uv.sources]
magatama-core = { workspace = true }
magatama-mcp = { workspace = true }

# Development dependencies (workspace-wide)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

# Ruff configuration (linter + formatter)
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/magatama-core/src", "packages/magatama-mcp/src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["magatama_core", "magatama_mcp"]

# MyPy configuration (type checker)
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_typescript.*",
    "tree_sitter_javascript.*",
    "tree_sitter_rust.*",
    "tree_sitter_go.*",
    "networkx.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["packages/magatama-core/tests", "packages/magatama-mcp/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may use real services)",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["packages/magatama-core/src", "packages/magatama-mcp/src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
