# MAGATAMA Workspace - Monorepo Configuration
# Project: MAGATAMA (勾玉) - AI Coding Support MCP Server
# Article I: Library-First Principle - magatama-core as independent library

[project]
name = "magatama-workspace"
version = "0.5.3"
description = "MAGATAMA (勾玉) - Knowledge Graph MCP Server for AI Coding Support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "MAGATAMA Team" }]
dependencies = [
    "tree-sitter-typescript>=0.23.2",
]

[tool.uv.workspace]
members = ["packages/magatama-core", "packages/magatama-mcp"]

[tool.uv.sources]
magatama-core = { workspace = true }
magatama = { workspace = true }

# Development dependencies (workspace-wide)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

# Ruff configuration (linter + formatter)
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/magatama-core/src", "packages/magatama-mcp/src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "E501",     # Line too long (handled by the formatter; long strings allowed)
    # Established style of this codebase / low-value churn:
    "PLC0415",  # import-outside-top-level (deliberate lazy imports)
    "PLR0911",  # too-many-return-statements
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
    "PLR1714",  # repeated-equality-comparison
    "PLW2901",  # redefined-loop-name
    "PLW1510",  # subprocess-run-without-check
    "ARG001",   # unused-function-argument
    "ARG002",   # unused-method-argument
    "TC001",    # typing-only-first-party-import
    "TC003",    # typing-only-standard-library-import
    "PTH123",   # open() vs Path.open()
    "ERA001",   # commented-out-code
    "B007",     # unused-loop-control-variable
    "B017",     # assert-raises-exception
    "SIM102",   # collapsible-if
    "SIM105",   # suppressible-exception
    "SIM108",   # if-else-block-instead-of-if-exp
    "SIM115",   # open-file-with-context-handler
    "SIM116",   # if-else-block-instead-of-dict-lookup
    "RUF001",   # ambiguous-unicode-character
    "RUF005",   # collection-literal-concatenation
    "RUF012",   # mutable-class-default
    "RUF022",   # unsorted __all__
    "UP042",    # replace-str-enum (StrEnum requires 3.11+ only)
]

[tool.ruff.lint.isort]
known-first-party = ["magatama_core", "magatama_mcp"]

# MyPy configuration (type checker)
# Pragmatic (non-strict) baseline: catches real type errors (bad calls,
# attribute/None misuse, wrong arg/index types) without the aspirational
# strict-only checks (untyped-def / Any-generics) that this codebase never met.
# Tests are not type-checked.
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
follow_imports = "silent"
ignore_missing_imports = true
exclude = '(^|/)tests/'

# Infrastructure adapters that interact heavily with untyped C-extension
# libraries (tree-sitter grammars, networkx) are not type-checked. The typed
# core — domain, application use cases, MCP server and CLI — is fully checked.
[[tool.mypy.overrides]]
module = [
    "magatama_core.infrastructure.parsers.*",
    "magatama_core.infrastructure.storage.sqlite_storage",
    "magatama_core.infrastructure.storage.networkx_graph",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_typescript.*",
    "tree_sitter_javascript.*",
    "tree_sitter_rust.*",
    "tree_sitter_go.*",
    "networkx.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["packages/magatama-core/tests", "packages/magatama-mcp/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may use real services)",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["packages/magatama-core/src", "packages/magatama-mcp/src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
